==> RT-Thread/rt-thread/bsp/mm32l07x/Libraries/MM32L0xx/HAL_lib/src/HAL_can.c <==
#include "HAL_can.h"
#include "HAL_rcc.h"

void CAN_DeInit(CAN_TypeDef* CANx)
{
  /* Check the parameters */
  assert_param(IS_CAN_ALL_PERIPH(CANx));
  switch (*(uint32_t*)&CANx)
  {
  case CAN1_BASE:
    /* Enable CAN1 reset state */
    RCC_APB1PeriphResetCmd(RCC_APB1Periph_CAN1, ENABLE);
    /* Release CAN1 from reset state */
    RCC_APB1PeriphResetCmd(RCC_APB1Periph_CAN1, DISABLE);
    break;        
  default:
    break;
  }
  
}

uint8_t CAN_Init(CAN_TypeDef* CANx, CAN_Basic_InitTypeDef* CAN_Basic_InitStruct)
{
  uint8_t InitStatus = CANINITFAILED;
  
  /* Check the parameters */
  assert_param(IS_FUNCTIONAL_STATE(CAN_Basic_InitStruct->SJW));
  assert_param(IS_FUNCTIONAL_STATE(CAN_Basic_InitStruct->BRP));
  assert_param(IS_FUNCTIONAL_STATE(CAN_Basic_InitStruct->SAM));
  assert_param(IS_FUNCTIONAL_STATE(CAN_Basic_InitStruct->TESG2));
  assert_param(IS_FUNCTIONAL_STATE(CAN_Basic_InitStruct->TESG1));
  
  CANx->BTR0 = ((uint32_t)(CAN_Basic_InitStruct->SJW)<<6)|((uint32_t)(CAN_Basic_InitStruct->BRP));
  CANx->BTR1 = ((uint32_t)(CAN_Basic_InitStruct->SAM)<<7)|((uint32_t)(CAN_Basic_InitStruct->TESG2)<<4)|\
    ((uint32_t)(CAN_Basic_InitStruct->TESG1));
  if(CAN_Basic_InitStruct->GTS == ENABLE)
  {
    CANx->CMR |= (uint32_t)CAN_SleepMode;
  }
  else
  {
    CANx->CMR &= ~(uint32_t)CAN_SleepMode;
  }
  
  CANx->CDR |= ((CAN_Basic_InitStruct->CBP)<<6) | ((CAN_Basic_InitStruct->RXINTEN)<<5) | \
    ((CAN_Basic_InitStruct->CLOSE_OPEN_CLK)<<3) | (CAN_Basic_InitStruct->CDCLK);
  
  InitStatus = CANINITOK;
  return InitStatus;
}

void CAN_FilterInit(CAN_Basic_FilterInitTypeDef* CAN_Basic_FilterInitStruct)
{
  /* Filter Mode */
  CAN1->ACR = CAN_Basic_FilterInitStruct->CAN_FilterId;
  CAN1->AMR = CAN_Basic_FilterInitStruct->CAN_FilterMaskId;
}

void CAN_StructInit(CAN_Basic_InitTypeDef* CAN_Basic_InitStruct)
{
  /*--------------- Reset CAN_Basic init structure parameters values -----------------*/
  
  
  /* initialize the BRP member(where can be set with (0..63))*/
  CAN_Basic_InitStruct->BRP = 0x0;
  /* initialize the SJW member(where can be set with (0..3)) */
  CAN_Basic_InitStruct->SJW = 0x0;
  /* Initialize the TESG1 member(where can be set with (0..15)) */
  CAN_Basic_InitStruct->TESG1 = 0x0;
  /* Initialize the TESG2 member(where can be set with(0..7)) */
  CAN_Basic_InitStruct->TESG2 = 0x0;
  /* Initialize the SAM member(where can be set (SET or RESET)) */
  CAN_Basic_InitStruct->SAM = RESET;
  /* Initialize the GTS member to Sleep Mode(where can be set (ENABLE or DISABLE)) */
  CAN_Basic_InitStruct->GTS = DISABLE;
  /* Initialize the external pin CLKOUT frequence */
  CAN_Basic_InitStruct->CDCLK = 0x0;
  /* Initialize the external clk is open or close */
  CAN_Basic_InitStruct->CLOSE_OPEN_CLK = 0x0;
  /* Initialize the TX1 pin work as rx interrupt output */
  CAN_Basic_InitStruct->RXINTEN = 0x0;
  /* Initialize the CBP of CDR register */
  CAN_Basic_InitStruct->CBP = 0x0;
}

uint8_t CAN_Transmit(CAN_TypeDef* CANx,CanBasicTxMsg* BasicTxMessage)
{
  /* TXOK and TME bits */
  uint8_t state = 0;
  /* Check the parameters */
  assert_param(IS_CAN_RTR(BasicTxMessage->RTR));
  assert_param(IS_CAN_DLC(BasicTxMessage->DLC));
  
  CANx->TXID0 = (BasicTxMessage->IDH);
  CANx->TXID1 = (BasicTxMessage->IDL<<5)|(BasicTxMessage->RTR<<4)|(BasicTxMessage->DLC);
  if((FunctionalState)(BasicTxMessage->RTR) != ENABLE)
  {
    CANx->TXDR0 = BasicTxMessage->Data[0];
    CANx->TXDR1 = BasicTxMessage->Data[1];
    CANx->TXDR2 = BasicTxMessage->Data[2];
    CANx->TXDR3 = BasicTxMessage->Data[3];
    CANx->TXDR4 = BasicTxMessage->Data[4];
    CANx->TXDR5 = BasicTxMessage->Data[5];
    CANx->TXDR6 = BasicTxMessage->Data[6];
    CANx->TXDR7 = BasicTxMessage->Data[7];
  }
  
  CANx->CMR = CAN_BASIC_CMR_TR;
  
  return state;
}

void CAN_CancelTransmit(CAN_TypeDef* CANx)
{
  /* Check the parameters */
  assert_param(IS_CAN_ALL_PERIPH(CANx));
  assert_param(IS_CAN_TRANSMITMAILBOX(Mailbox));
  /* abort transmission */
  CANx->CMR = CAN_AT;
  
}

void CAN_FIFORelease(CAN_TypeDef* CANx)
{
  /* Check the parameters */
  assert_param(IS_CAN_ALL_PERIPH(CANx));
  
  /* Release FIFO */
  CANx->CMR |= (uint32_t)CAN_RRB;
  
}

void CAN_Receive(CAN_TypeDef* CANx,CanBasicRxMsg* BasicRxMessage)
{
  uint16_t tempid;
  /* Check the parameters */
  assert_param(IS_CAN_ALL_PERIPH(CANx));
  assert_param(IS_CAN_FIFO(FIFONumber));
  BasicRxMessage->RTR = (uint8_t)((CANx->RXID1)>>4)&0x1;
  BasicRxMessage->DLC = (uint8_t)((CANx->RXID1)&0xf);
  tempid = (uint16_t)(((CANx->RXID1)&0xe0)>>5);
  tempid |= (uint16_t)(CANx->RXID0<<3);
  BasicRxMessage->ID = tempid;
  BasicRxMessage->Data[0] = CAN1->RXDR0;
  BasicRxMessage->Data[1] = CAN1->RXDR1;
  BasicRxMessage->Data[2] = CAN1->RXDR2;
  BasicRxMessage->Data[3] = CAN1->RXDR3;
  BasicRxMessage->Data[4] = CAN1->RXDR4;
  BasicRxMessage->Data[5] = CAN1->RXDR5;
  BasicRxMessage->Data[6] = CAN1->RXDR6;
  BasicRxMessage->Data[7] = CAN1->RXDR7;
  CAN_FIFORelease( CANx);
}

uint8_t CAN_Sleep(CAN_TypeDef* CANx)
{
  uint8_t sleepstatus = CANSLEEPFAILED;
  
  /* Check the parameters */
  assert_param(IS_CAN_ALL_PERIPH(CANx));
  CANx->CMR |= CAN_SleepMode;
  if((CANx->CMR&0x10)==CAN_SleepMode)
  {
    sleepstatus =  CANSLEEPOK;
  }
  /* At this step, sleep mode status */
  return (uint8_t)sleepstatus;
  
}

uint8_t CAN_WakeUp(CAN_TypeDef* CANx)
{
  uint8_t wakeupstatus = CANWAKEUPFAILED;
  
  /* Check the parameters */
  assert_param(IS_CAN_ALL_PERIPH(CANx));
  
  /* Wake up request */
  CANx->CMR &= ~CAN_SleepMode;
  
  /* Sleep mode status */
  if((CANx->CMR&0x01)==0)
  {
    /* Sleep mode exited */
    wakeupstatus = CANWAKEUPOK;
  }
  /* At this step, sleep mode status */
  return (uint8_t)wakeupstatus;
}

FlagStatus CAN_GetFlagStatus(CAN_TypeDef* CANx,uint32_t CAN_FLAG)
{
  FlagStatus bitstatus = RESET;
  
  /* Check the parameters */
  assert_param(IS_CAN_ALL_PERIPH(CANx));
  assert_param(IS_CAN_GET_FLAG(CAN_FLAG));
  
  
  if((CANx->SR & CAN_FLAG) == CAN_FLAG)
  {
    /* CAN_FLAG is set */
    bitstatus = SET;
  }
  else
  {
    /* CAN_FLAG is reset */
    bitstatus = RESET;
  }
  /* Return the CAN_FLAG status */
  return bitstatus;
}

ITStatus CAN_GetITStatus(CAN_TypeDef* CANx, uint32_t CAN_IT)
{
  ITStatus itstatus = RESET;
  
  /* Check the parameters */
  assert_param(IS_CAN_ALL_PERIPH(CANx));
  assert_param(IS_CAN_IT(CAN_IT));
  
  /* check the interrupt enable bit */
  if((CANx->IR & CAN_IT) != CAN_IT)
  {
    itstatus = RESET;
  }
  else 
  {
    itstatus = SET;
  }
  
  return itstatus;
}
